// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `<div class="buri-tabbar buri-tabbar--fixed" style="z-index: 1;"></div>`;

exports[`route mode 1`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 2`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 3`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 1`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 2`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`watch tabbar value 1`] = `
<div class="buri-hairline--top-bottom buri-tabbar buri-tabbar--fixed" style="z-index: 1;">
  <div class="buri-tabbar-item">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">Tab</div>
  </div>
  <div class="buri-tabbar-item buri-tabbar-item--active">
    <div class="buri-tabbar-item__icon">
      <!---->
    </div>
    <div class="buri-tabbar-item__text">Tab</div>
  </div>
</div>
`;
